# neo-titanic-ml

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
NeoTitanicML/: CMakeLists.txt
NeoTitanicML/src/: CMakeLists.txt  common.h
NeoTitanicML/src/model/: agent.cc  agent.h
NeoTitanicML/src/model/data/: passenger_info.h  passenger_info_converter.cc  passenger_info_converter.h
NeoTitanicML/src/model/data/preprocessing/: label_encoder.cc  label_encoder.h  standart_scaler.cc  standart_scaler.h
NeoTitanicML/src/tools/preparation/: csv_reader.cc  csv_reader.h  main.cc  utility.cc  utility.h
NeoTitanicML/src/tools/test/: main.cc
NeoTitanicML/src/tools/train/: main.cc
NeoTitanicML/tests/data/: simple.csv
NeoTitanicML/tests/unit/: CMakeLists.txt  settings.h.in
NeoTitanicML/tests/unit/model/data/: passenger_info_converter_test.cc
NeoTitanicML/tests/unit/model/data/preprocessing/: label_encoder_test.cc  standart_scaler.ipynb  standart_scaler_test.cc
NeoTitanicML/tests/unit/tools/preparation/: csv_reader_test.cc  utility_test.cc
research/: notebook.ipynb
